2010-07-09  Sebastien Pouliot  <sebastien@ximian.com>

	* application.cpp: Use RemoveHandler twice (instead of a single
	RemoveAllHandlers) to see if this fix the multiple DRT crashing
	after success.

2010-07-09  Jeffrey Stedfast  <fejj@novell.com>

	* deepzoomimagetilesource.cpp (EndElement): Set the subsource's
	server_format to info->server_format, not info->format.
	(DZParsedImage): ServerFormat is not a required attr.

2010-07-09  Alan McGovern  <amcgovern@novell.com>

	* control.cpp: Whenever the ContentTemplate changes we need to
	  invalidate the measure. We can't rely on InvalidateMeasure
	  being called as part of clearing out the existing root
	  element as there may be no existing root element. Similarly
	  for Control.Template. Fixes remainder of drt 350.

2010-07-08  David Reveman  <davidr@novell.com>

	* uielement.cpp:
	* effect.h:
	* effect.cpp: Add proper clipping support to effect framework. The
	local clip is applied after any pixel effects but before any
	perspective transformation. This makes the rendering order:

	1. OpacityMask
	2. Opacity
	3. Effect
	4. Clip
	5. Projection
	6. RenderTransform
	7. LayoutTransform
	8. Parent Properties

2010-07-08  Jeffrey Stedfast  <fejj@novell.com>

	* multiscaleimage.cpp (Emit*): Only emit the event if it has
	listeners to avoid instantiating unneeded EventArgs.

2010-07-08  Alan McGovern  <amcgovern@novell.com>

	* dependencyobject.cpp: Make sure FrameworkElements aren't
	  marked as being their own mentor by never checking the
	  'this' element when setting the mentor.

2010-07-07  Jeffrey Stedfast  <fejj@novell.com>

	Fixes for Seadragon-InvalidXml

	* deepzoomimagetilesource.cpp (start_element): Validate all
	element attribute values and make sure all expected attributes
	were present. Set the error flag if anything goes wrong.
	(DownloaderComplete): If the error flag is set, raise the
	DownloaderFailed handler.

	* utils.cpp ([U]Int32TryParse): New functions to make parsing
	integers easier.
